# HPC

./: .gitignore  README.md
PA1/: data  gen.sh  odd_even_sort  odd_even_sort.cpp  report_PA1.md  run.sh  run_all.sh  worker.cpp  worker.h
PA2/: apsp.cu  benchmark  report_PA2.md  res.txt
PA3/: CMakeLists.txt  report_PA3.md
PA3/data/: am.config  am.graph  am.graph.edgedump  am.graph.ptrdump  amazon_cogdl.config  amazon_cogdl.graph  amazon_cogdl.graph.edgedump  amazon_cogdl.graph.ptrdump  arxiv.config  arxiv.graph  arxiv.graph.edgedump  arxiv.graph.ptrdump  citation.config  citation.graph  citation.graph.edgedump  citation.graph.ptrdump  collab.config  collab.graph  collab.graph.edgedump  collab.graph.ptrdump  ddi.config  ddi.graph  ddi.graph.edgedump  ddi.graph.ptrdump  ppa.config  ppa.graph  ppa.graph.edgedump  ppa.graph.ptrdump  products.config  products.graph  products.graph.edgedump  products.graph.ptrdump  protein.config  protein.graph  protein.graph.edgedump  protein.graph.ptrdump  reddit.dgl.config  reddit.dgl.graph  reddit.dgl.graph.edgedump  reddit.dgl.graph.ptrdump  (+12 more)
PA3/include/: spmm_opt.h
PA3/script/: run_all_CPU.sh
PA3/scripts/: run_all.sh  run_all_CPU.sh
PA3/src/: spmm_cpu_opt.cpp  spmm_opt.cu
PA3/toy_data/: toy.graph  toy.graph.edgedump  toy.graph.ptrdump
exp0/: mpi_pow  mpi_pow.cpp  openmp_pow  openmp_pow.cpp  report_小作业0.md
exp1/: mpi_async  mpi_sync  report_小作业1.md  task1.txt  task2.txt
exp2/: Makefile  allreduce  allreduce.cpp  report_小作业2.md  res.txt  run.sh
exp3/: omp_sched  omp_sched.cpp  report_小作业3.md  run.sh
exp4/: aplusb  draw.py  draw2.py  main.cu  report_小作业4.md  res.txt  res2.txt  run_cuda
exp5/: aplusb-intrinsic.cpp  report_小作业5.md
exp6/: draw.py  output_g.txt  output_s.txt  report_小作业6.md  run_g.sh  run_s.sh  test_gmem  test_smem  test_smem.cu
exp7/: report_小作业7.md
exp7/task0/: main_fast
exp8/: 2020010944.json
